added a signup form

--- a/index.html
+++ b/index.html
@@ -1,12 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Daraz Clone </title>
- 
-</head>
-<body>
-       <a href="p1.html" > file </a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="bootstrap-5.3.8-dist/bootstrap-5.3.8-dist/css/bootstrap.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+    <title>form in bstp</title>
+  </head>
+  <body>
+    <div class="row m-1 p-lg-4">
+      <div class="row justify-content-lg-center">
+        <div class="col-lg-6">
+          <form action="" class="form-control">
+            <label for="">Name</label>
+            <input type="text" class="form-control" />
+
+            <label for="">Father Name</label>
+            <input type="text" class="form-control" />
+            <label for="">Password</label>
+            <input type="Password" class="form-control" />
+
+            <label for="">Date</label>
+            <input type="date" class="form-control" />
+            <label for="">Time</label>
+            <input type="Time" class="form-control" />
+            <label for="">Range</label>
+
+            <input type="Range" class="form-range" />
+            <label for="">Gender</label>
+            <div class="form-control">
+              <input type="radio" name="gender" class="form-check-input" />
+              <label for="">Male</label>
+            </div>
+            <div class="form-control">
+              <input type="radio" name="gender" class="form-check-input" />
+              <label for="">Female</label>
+            </div>
+            <label for="">Country</label>
+            <select name="" id="" class="form-control">
+              <option value="">Pakistan</option>
+              <option value="">England</option>
+              <option value="">United States</option>
+              <option value="">Russia</option>
+            </select>
+            <!-- <input
+             <!-- type="submit"  
+              class="btn btn-outline-primary form-control mt-2"   /> --> 
+              
+               <a href="p1.html" class="btn btn-outline-primary form-control mt-2">Submit </a>
+            
+          </form>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
